--- a/config.yaml
+++ b/config.yaml
@@ -2,8 +2,8 @@ model:
     provider: openai_like
     id: stepfun/step-3.5-flash:free
     base_url: https://openrouter.ai/api/v1
-    api_key_env: OPENAI_API_KEY
-    structured_outputs: false
+    api_key_env: OPENROUTER_API_KEY
+    structured_outputs: auto
 
 discord:
     token_env: DISCORD_BOT_TOKEN
@@ -26,6 +26,18 @@ memory:
           - topics: array of strings (optional)
         Use lowercase keys exactly as shown. Do not add extra keys or prose.
     summary_request_message: "Return JSON only. Include the required key: summary."
+
+learning:
+    enabled: true
+    mode: always # always | agentic | propose | hitl
+    add_to_context: true
+    stores:
+        user_profile: true
+        user_memory: true
+        session_context: false
+        entity_memory: false
+        learned_knowledge: false
+        decision_log: false
 
 toolkits:
     web_search:
