--- a/workspace/agents/architect/agent-config.yml
+++ b/workspace/agents/architect/agent-config.yml
@@ -5,7 +5,7 @@ model:
     id: glm-4.7
     base_url: https://api.z.ai/api/coding/paas/v4
     api_key_env: GLM_API_KEY
-tools: [web_search, website, github, file, shell, tasks, collaboration, bridge]
+tools: [bridge]
 skills: [web-research]
 workspace: ../../..
 instructions: |
