added team thing

--- a/workspace/CRON.yaml
+++ b/workspace/CRON.yaml
@@ -3,18 +3,10 @@ timezone: Europe/Bucharest
 channel_id: 1395291091627937906
 jobs:
     - name: daily-status
-      cron: "0 9 * * *"
+      cron: "0 8 * * *"
       timezone: Europe/Bucharest
       agent: main
-      message: "Send a daily status update."
-      deliver: true
-      channel_id: null
-      session_scope: isolated
-    - name: hourly-ai-news
-      cron: "0 * * * *"
-      timezone: Europe/Bucharest
-      agent: main
-      message: "Fetch the latest AI news from web, Hacker News, and GitHub, and provide a concise summary formatted for Discord."
+      message: "Send the latest news from AI and from tech, you can access the current date and time if you want you should have the details. Search the web and heacker news for latest ones. Provide also the trading github repos for the day from open source (it needs to be for the day)"
       deliver: true
       channel_id: null
       session_scope: isolated
