--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,9 @@
 model:
     provider: openai_like
-    id: stepfun/step-3.5-flash:free
-    base_url: https://openrouter.ai/api/v1
-    api_key_env: OPENROUTER_API_KEY
-    structured_outputs: auto
+    id: glm-4.7
+    base_url: https://api.z.ai/api/coding/paas/v4
+    api_key_env: GLM_API_KEY
+    structured_outputs: off
 
 discord:
     token_env: DISCORD_BOT_TOKEN
@@ -17,8 +17,8 @@ memory:
     search_session_history: true
     num_history_sessions: 3
     add_memories_to_context: true
-    enable_session_summaries: true
-    add_session_summary_to_context: true
+    enable_session_summaries: false
+    add_session_summary_to_context: false
     summary_prompt: |
         You are generating a session summary. Return ONLY a JSON object.
         Required keys:
@@ -107,12 +107,48 @@ agents:
               ]
           skills: []
           instructions: ""
+        - name: architect
+          tools: [web_search, website, file, shell]
+          skills: []
+          instructions: |
+              You are the architect agent.
+              Focus on high-level design, planning, and tradeoffs.
+              Produce a clear plan before implementation steps.
+        - name: manager
+          tools: [web_search, website, github, file, shell]
+          skills: []
+          instructions: |
+              You are the manager agent.
+              Coordinate architect and engineer inputs, then produce the final response.
+              Resolve conflicts and keep the answer concise and actionable.
+        - name: engineer
+          tools: [web_search, website, github, file, shell]
+          skills: []
+          instructions: |
+              You are the software engineer agent.
+              Focus on implementation details, code changes, and tests.
+              Ask clarifying questions when requirements are ambiguous.
         - name: research
-          tools: [web_search, hackernews, website, github, youtube]
+          tools: [web_search, hackernews, website, github, youtube, file, shell]
           skills: [web-research]
           instructions: ""
     routing:
         rules:
+            - agent: manager
+              channel_ids: []
+              user_ids: []
+              guild_ids: []
+              contains: ["manage"]
+            - agent: architect
+              channel_ids: []
+              user_ids: []
+              guild_ids: []
+              contains: ["plan"]
+            - agent: engineer
+              channel_ids: []
+              user_ids: []
+              guild_ids: []
+              contains: ["build"]
             - agent: research
               channel_ids: []
               user_ids: []
