--- a/config.yaml
+++ b/config.yaml
@@ -87,10 +87,12 @@ context:
 
 agents:
     base_instructions: |
-        You have access to a separate research agent named "research" that is better suited
-        for heavy web research (HackerNews, GitHub, YouTube). If a request requires deep
-        research, route it by asking the user to prefix their message with "research:" or
-        explicitly mentioning "agent:research".
+        You may be orchestrated inside teams. Delegate planning-heavy tasks to architect and
+        implementation-heavy tasks to software-engineer when appropriate.
+    workspace_dir: workspace/agents
+    aliases:
+        engineer: software-engineer
+        software-enginner: software-engineer
     default: main
     definitions:
         - name: main
@@ -107,44 +109,24 @@ agents:
               ]
           skills: []
           instructions: ""
-        - name: architect
-          tools: [web_search, website, file, shell]
-          skills: []
-          instructions: |
-              You are the architect agent.
-              Focus on high-level design, planning, and tradeoffs.
-              Produce a clear plan before implementation steps.
-        - name: manager
-          tools: [web_search, website, github, file, shell]
-          skills: []
-          instructions: |
-              You are the manager agent.
-              Coordinate architect and engineer inputs, then produce the final response.
-              Resolve conflicts and keep the answer concise and actionable.
-        - name: engineer
-          tools: [web_search, website, github, file, shell]
-          skills: []
-          instructions: |
-              You are the software engineer agent.
-              Focus on implementation details, code changes, and tests.
-              Ask clarifying questions when requirements are ambiguous.
         - name: research
           tools: [web_search, hackernews, website, github, youtube, file, shell]
           skills: [web-research]
           instructions: ""
     routing:
         rules:
-            - agent: manager
+            - agent: delivery-team
               channel_ids: []
               user_ids: []
               guild_ids: []
-              contains: ["manage"]
+              contains: ["manage", "orchestrate", "team:"]
+              starts_with: ["team:"]
             - agent: architect
               channel_ids: []
               user_ids: []
               guild_ids: []
               contains: ["plan"]
-            - agent: engineer
+            - agent: software-engineer
               channel_ids: []
               user_ids: []
               guild_ids: []
@@ -155,6 +137,23 @@ agents:
               guild_ids: []
               contains: ["research:"]
               starts_with: ["research:"]
+
+teams:
+    definitions:
+        - name: delivery-team
+          members: [architect, software-engineer]
+          respond_directly: true
+          determine_input_for_members: true
+          delegate_to_all_members: false
+          add_member_tools_to_context: true
+          add_team_history_to_members: true
+          num_team_history_runs: 5
+          show_members_responses: false
+          debug_mode: false
+          instructions: |
+              You are the delivery team coordinator.
+              Produce one final answer after collecting architecture and implementation input.
+              Keep output concise, actionable, and include next steps.
 
 skills:
     enabled: true
