--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,38 @@
 model:
     provider: openai_like
-    id: glm-4.7
-    base_url: https://api.z.ai/api/coding/paas/v4
-    api_key_env: GLM_API_KEY
+    id: openrouter/pony-alpha
+    base_url: https://openrouter.ai/api/v1
+    api_key_env: OPENROUTER_API_KEY
     structured_outputs: off
 
 discord:
     token_env: DISCORD_BOT_TOKEN
+
+logging:
+    level: INFO # DEBUG | INFO | WARNING | ERROR | CRITICAL
+    format: detailed # detailed | simple | custom format string
+    file:
+        enabled: true
+        path: logs/bitdoze-bot.log
+        max_bytes: 10485760 # 10MB
+        backup_count: 5
+
+research_mode:
+    enabled: true
+    trigger_on_prefix: true # activates for messages that start with "research:"
+    trigger_on_research_agent: true # activates when routed target is the research agent
+    research_agent_name: research
+    min_sources: 3 # minimum unique http(s) URLs in Sources
+
+tool_permissions:
+    enabled: false # default off for backward-compatible permissive behavior
+    default_effect: allow # allow | deny (applies when no rule matches)
+    rules: []
+    audit:
+        enabled: true
+        path: logs/tool-audit.jsonl
+        include_arguments: false # set true to record args/kwargs
+        redacted_keys: [token, secret, password, api_key, authorization]
 
 memory:
     mode: automatic
