Improve runtime reliability, fallback tool execution, and memory/monitoring config
Summary:
- Add run monitoring with active-run tracking, telemetry JSONL logging, and heartbeat watchdog alerts.
- Add slow-run interim notice for long Discord/research runs.
- Fix response extraction to avoid leaking raw RunOutput objects (heartbeat/cron/discord).
- Improve fallback tool-call handling: support additional markup formats, configurable denied tools, entrypoint-based function resolution, and cleaner no-output handling.
- Strengthen FileTools usage guidance and set FileTools base_dir to '/'.
- Remove shell_policy file-op enforcement feature per project preference.
- Update service unit to treat SIGTERM/143 as clean shutdown.
- Refresh docs/examples/config and add regression tests for monitoring, fallback parsing/execution, and observability behavior.

--- a/bitdoze-bot.service
+++ b/bitdoze-bot.service
@@ -5,6 +5,7 @@ After=network.target
 [Service]
 WorkingDirectory=/home/dragos/projects/bitdoze-bot
 ExecStart=/home/dragos/.local/bin/uv run main.py --config config.yaml
+SuccessExitStatus=143 SIGTERM
 Restart=always
 RestartSec=5
 Environment=PYTHONUNBUFFERED=1
