--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,15 @@ OPENAI_API_KEY=
 
 # GitHub personal access token (optional, for GithubTools)
 GITHUB_ACCESS_TOKEN=
+
+# Reddit API credentials (optional, for RedditTools)
+REDDIT_CLIENT_ID=
+REDDIT_CLIENT_SECRET=
+REDDIT_USERNAME=
+REDDIT_PASSWORD=
+
+# PostgreSQL + PgVector (optional, for knowledge base backend=pgvector)
+# Start with: docker compose up -d
+POSTGRES_PASSWORD=bitdoze_secret
+PGVECTOR_PORT=5532
+PGVECTOR_DB_URL=postgresql+psycopg://bitdoze:bitdoze_secret@localhost:5532/bitdoze
