--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,9 @@ dependencies = [
     "PyGithub",
     "sqlalchemy>=2.0.46",
     "youtube-transcript-api",
+    "praw",
+    "lancedb",
+    "tantivy",
+    "pgvector",
+    "psycopg[binary]",
 ]
