--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,22 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+
+  cognee:
+    image: cognee/cognee:latest
+    container_name: cognee
+    restart: unless-stopped
+    ports:
+      - "127.0.0.1:8000:8000"
+    environment:
+      LLM_API_KEY: ${LLM_API_KEY:-}
+      ENABLE_BACKEND_ACCESS_CONTROL: "false"
+      REQUIRE_AUTHENTICATION: "false"
+    volumes:
+      - ${BITDOZE_BOT_HOME:-/home/dragos/.bitdoze-bot}/data/cognee:/app/cognee/.cognee_system
+    healthcheck:
+      test: ["CMD", "python3", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
