--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ REDDIT_PASSWORD=
 POSTGRES_PASSWORD=bitdoze_secret
 PGVECTOR_PORT=5532
 PGVECTOR_DB_URL=postgresql+psycopg://bitdoze:bitdoze_secret@localhost:5532/bitdoze
+
+# Optional Postgres URL for memory backend=postgres
+# MEMORY_DB_URL=postgresql+psycopg://bitdoze:bitdoze_secret@localhost:5532/bitdoze
